# roll

./: AGENTS.md  Cargo.toml  README.md
expr/: Cargo.toml
expr/src/: error.rs  lib.rs  token.rs
exprng/: Cargo.toml
exprng/src/: lib.rs
roll/: Cargo.toml
roll/src/: args.rs  main.rs
src/: args.rs  bounded_rng.rs  config.rs  default_iter.rs  error.rs  expression.rs  history.rs  main.rs  opts.rs  realize.rs  rng.rs
