[package]
name = "roll"
version = "0.5.0"
authors = ["J/A <archer884@zoho.com>"]
edition = "2021"
description = """
A dice roller.

Use expressions like 2d8+5. Results are printed with the total first, followed
by each individual roll, followed by the fixed modifier (if any). Max rolls
(crits) are highlighted in green, while low rolls are highlighted in red.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
comfy-table = "7.1.0"
directories = "5.0.1"
either = "1.9.0"
hashbrown = { version = "0.14.3", features = ["serde"] }
owo-colors = "3.5.0"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
smallvec = "1.11.2"
squirrel-rng = "0.2.2"
thiserror = "1.0.50"
