[package]
name = "roll"
version = "0.5.0"
authors = ["J/A <archer884@zoho.com>"]
edition = "2021"
description = """
A dice roller.

Use expressions like 2d8+5. Results are printed with the total first, followed
by each individual roll, followed by the fixed modifier (if any). Max rolls
(crits) are highlighted in green, while low rolls are highlighted in red.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
comfy-table = "7.2.1"
directories = "6.0.0"
either = "1.15.0"
hashbrown = { version = "0.16.0", features = ["serde"] }
owo-colors = "4.2.3"
rand = "0.9.2"
regex = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"
squirrel-rng = "0.3.0"
thiserror = "2.0.17"
