[package]
name = "roll"
version = "0.6.0"
authors = ["J/A <archer884@zoho.com>"]
edition = "2024"
description = """
A dice roller.

Use expressions like 2d8+5. Results are printed with the total first, followed
by each individual roll, followed by the fixed modifier (if any). Max rolls
(crits) are highlighted in green, while low rolls are highlighted in red.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
comfy-table = "7.2.2"
directories = "6.0.0"
either = "1.16.0"
hashbrown = { version = "0.17.1", features = ["serde"] }
owo-colors = "4.3.0"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smallvec = "1.15.1"
squirrel-rng = "0.4.0"
thiserror = "2.0.18"
