[package]
name = "expr"
version = "0.3.4"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
smallvec = "1.8.0"
thiserror = "1.0.30"
