[package]
name = "expr"
version = "0.3.6"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
smallvec = "1.8.0"
thiserror = "1.0.31"
