[package]
name = "roll"
version = "0.3.16"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"
description = """
A dice roller.

Use expressions like 2d8+5. Results are printed with the total first, followed
by each individual roll, followed by the fixed modifier (if any). Max rolls
(crits) are highlighted in green, while low rolls are highlighted in red.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
directories = "4.0.1"
either = "1.6.1"
expr = { path = '../expr' }
exprng = { path = '../exprng' }
hashbrown = { version = "0.12.1", features = ["serde"] }
owo-colors = "3.4.0"
rand = "0.8.5"
regex = "1.5.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
squirrel-rng = "0.2.1"
thiserror = "1.0.31"
